--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-react-hooks": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start --port 3002 ",
+    "start": "PORT=3002 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
