--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devServer": {
+  "allowedHosts": "all"
+}
+,
   "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
